--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>The Role	of Academic Technology	Development in Cancer Research by QIICR</title>
+    <title>The Role	of Academic Technology Development in Cancer Research</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,37 +12,66 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">The Role	of Academic Technology	Development in Cancer Research</h1>
-      <h2 class="project-tagline">CI4CC 2016 Spring Symposium: National Cancer Institute Informatics Technology for Cancer Research workshop</h2>
-      <a href="https://github.com/QIICR/CI4CC-Spring2016-ASW" class="btn">View on GitHub</a>
-      <a href="https://github.com/QIICR/CI4CC-Spring2016-ASW/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/QIICR/CI4CC-Spring2016-ASW/tarball/master" class="btn">Download .tar.gz</a>
+      <h2 class="project-tagline">Workshop organized by National Cancer Institute Informatics Technology for Cancer Research community at the CI4CC 2016 Spring Symposium</h2>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>The purpose of this page is to disseminate materials presented at the Day Zero of the <a href="http://www.ci4cc.org/events/spring2016">Cancer Informatics for Cancer Research (CI4CC) Spring 2016 Symposium</a>, as part of the National Cancer Institute Informatics Technology for Cancer Research (ITCR) workshop “The Role of Academic Technology Development in Cancer Research”. The workshop took place on March 13, 2016 in Napa, California.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>The goal of the workshop was to discuss the role of academic informatics technology in cancer research, with an emphasis on technology developed through the Informatics Technology for Cancer Research program (ITCR). ITCR is a relatively young program at NCI that aims to sustainably support development, maintenance and dissemination of investigator-initiated, research-driven informatics technology. As part of NCI, ITCR is interested in integration of informatics technology development with hypothesis-driven cancer research and translational/clinical investigations. ITCR promotes public-private partnership in technology development and distribution. Both commercial and academic technology play an important role in biomedical research, including clinical research. In this workshop we aimed provide a discussion forum to better understand the approaches, strengths, and limitations of academic technology development processes as well as the interfaces between the commercial and academic technology development communities.
+</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>The workshop was co-chaired by Mary Goldman, UC Santa Cruz, and Andrey Fedorov, Brigham and Women's Hospital and Harvard Medical School.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>We thank all the speakers for their willingness to share their ideas, and for their openness in making the slides presented at the workshop publicly available.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Program</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>Mary Goldman, UC Santa Cruz - Introduction <a href="assets/CI4CC2016-Goldman.pdf">[PDF]</a></li>
+</ul>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<ul>
+<li>Juli Klemm, NCI CBIIT - Workshop summary <a href="assets/CI4CC2016-Klemm-Summary.pdf">[PDF]</a></li>
+</ul>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h4>Developer Perspective</h4>
+
+<p>This session featured talks from established academic software tools that have a long history of development and a broad user base, followed by a panel discussion. The idea was to represent tools from various domains and discuss how the development of the tool is sustained, how the user community is supported, was open source adopted and and if so, why, how quality of the code is maintained (who is doing the coding), how the developing group is envisioning the software usage, etc.</p>
+
+<ul>
+  <li>Ron Kikinis, Brigham and Women's Hospital and Harvard Medical School - 3D Slicer <a href="assets/CI4CC2016-Kikinis.pdf">[PDF]</a></li>
+  <li>Sean Finan, Children's Hospital Bostom and Harvard Medical School - cTAKES <a href="assets/CI4CC-Finan.pdf">[PDF]</a></li>
+  <li>Martin Morgan, Roswell Park Cancer Center - Bioconductor <a href="assets/CI4CC-Morgan.pdf">[PDF]</a></li>
+  <li>Trinity Urban, Mass General Hospital and Harvard Medical School - Tumor Imaging Metrics Core <a href="assets/CI4CC-Urban.pdf">[PDF]</a></li>
+  <li>Bob Kuhn, UC Santa Cruz - UCSC Genome Browser <a href="assets/CI4CC-Kuhn.pdf">[PDF]</a></li>
+</ul>
+
+<h4>Stakeholders Perspective</h4>
+
+<p>In this session talks from the spectrum of academic software stakeholders were presented, followed by a panel discussion. Each speaker was asked to present the vision for the role of academic software in the domain of their work, challenges specific to the use of academic software, what is working well, what needs to be improved, words of advice to the academic software developers, etc.</p>
+
+<ul>
+  <li>Juli Klemm, National Cancer Institute, Center for Biomedical Informatics and Information Technology (CBIIT) - NCI-Supported Informatics Technology Development <a href="assets/CI4CC-Klemm.pdf">[PDF]</a></li>
+  <li>Michael McNitt-Gray, UCLA - Regulatory  Considera1ons  for  Imaging  Biomarkers  in  Clinical  Trials <a href="assets/CI4CC-Klemm.pdf">[PDF]</a></li>
+  <li>Srikanth Adiga, Krishagni Solutions - OpenSpecimen <a href="assets/CI4CC-Adiga.pdf">[PDF]</a></li>
+  <li>Robert Ochs and Nicholas Petrick, FDA - Regulatory Considerations  for Radiological Software <a href="assets/CI4CC-Ochs.pdf">[PDF]</a></li>
+</ul>
+
+<h4>Users Perspective</h4>
+
+<p>This session contained talks from the groups using academic software and unaffiliated with the code group developing the software tool. Such groups may include academic researchers, industry, clinical researchers, etc.</p>
+
+<ul>
+ <li>Jack London, Thomas Jefferson Cancer Center - i2b2: A tool for research data analytics <a href="assets/CI4CC-London.pdf">[PDF]</a> </li>
+ <li>Carmelo Gaudioso, Roswell Park Cancer Center - TIES Academic Software Development User Perspectives <a href="assets/CI4CC-Gaudioso.pdf">[PDF]</a></li>
+ <li>Tim Fox, Varian Medical Systems -  Academic Software in Cancer Research: User Perspectives <a href="assets/CI4CC-Fox.pdf">[PDF]</a></li>
+</ul>
+
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/QIICR/CI4CC-Spring2016-ASW">The Role	of Academic Technology	Development in Cancer Research</a> is maintained by <a href="https://github.com/QIICR">QIICR</a>.</span>
@@ -52,6 +81,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
