--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <li>Sean Finan, Children's Hospital Bostom and Harvard Medical School - cTAKES <a href="/assets/CI4CC2016-Finan.pdf">[PDF]</a></li>
   <li>Martin Morgan, Roswell Park Cancer Center - Bioconductor <a href="/assets/CI4CC2016-Morgan.pdf">[PDF]</a></li>
   <li>Trinity Urban, Mass General Hospital and Harvard Medical School - Tumor Imaging Metrics Core <a href="/assets/CI4CC2016-Urban.pdf">[PDF]</a></li>
-  <li>Bob Kuhn, UC Santa Cruz - UCSC Genome Browser <a href="/assets/CI4CC-Kuhn.pdf">[PDF]</a></li>
+  <li>Bob Kuhn, UC Santa Cruz - UCSC Genome Browser <a href="/assets/CI4CC2016-Kuhn.pdf">[PDF]</a></li>
 </ul>
 
 <h4>Stakeholders Perspective</h4>
