--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 <p>This session featured talks from established academic software tools that have a long history of development and a broad user base, followed by a panel discussion. The idea was to represent tools from various domains and discuss how the development of the tool is sustained, how the user community is supported, was open source adopted and and if so, why, how quality of the code is maintained (who is doing the coding), how the developing group is envisioning the software usage, etc.</p>
 
 <ul>
-  <li>Ron Kikinis, Brigham and Women's Hospital and Harvard Medical School - 3D Slicer <a href="/assets/CI4CC2016-Kikinis.pdf">[PDF]</a></li>
-  <li>Sean Finan, Children's Hospital Bostom and Harvard Medical School - cTAKES <a href="/assets/CI4CC2016-Finan.pdf">[PDF]</a></li>
-  <li>Martin Morgan, Roswell Park Cancer Center - Bioconductor <a href="/assets/CI4CC2016-Morgan.pdf">[PDF]</a></li>
-  <li>Trinity Urban, Mass General Hospital and Harvard Medical School - Tumor Imaging Metrics Core <a href="/assets/CI4CC2016-Urban.pdf">[PDF]</a></li>
-  <li>Bob Kuhn, UC Santa Cruz - UCSC Genome Browser <a href="/assets/CI4CC2016-Kuhn.pdf">[PDF]</a></li>
+  <li>Ron Kikinis, Brigham and Women's Hospital and Harvard Medical School - 3D Slicer <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Kikinis.pdf">[PDF]</a></li>
+  <li>Sean Finan, Children's Hospital Bostom and Harvard Medical School - cTAKES <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Finan.pdf">[PDF]</a></li>
+  <li>Martin Morgan, Roswell Park Cancer Center - Bioconductor <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Morgan.pdf">[PDF]</a></li>
+  <li>Trinity Urban, Mass General Hospital and Harvard Medical School - Tumor Imaging Metrics Core <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Urban.pdf">[PDF]</a></li>
+  <li>Bob Kuhn, UC Santa Cruz - UCSC Genome Browser <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Kuhn.pdf">[PDF]</a></li>
 </ul>
 
 <h4>Stakeholders Perspective</h4>
@@ -56,10 +56,10 @@
 <p>In this session talks from the spectrum of academic software stakeholders were presented, followed by a panel discussion. Each speaker was asked to present the vision for the role of academic software in the domain of their work, challenges specific to the use of academic software, what is working well, what needs to be improved, words of advice to the academic software developers, etc.</p>
 
 <ul>
-  <li>Juli Klemm, National Cancer Institute, Center for Biomedical Informatics and Information Technology (CBIIT) - NCI-Supported Informatics Technology Development <a href="assets/CI4CC2016-Klemm.pdf">[PDF]</a></li>
-  <li>Michael McNitt-Gray, UCLA - Regulatory  Considera1ons  for  Imaging  Biomarkers  in  Clinical  Trials <a href="/assets/CI4CC2016-McNitt-Gray.pdf">[PDF]</a></li>
-  <li>Srikanth Adiga, Krishagni Solutions - OpenSpecimen <a href="/assets/CI4CC2016-Adiga.pdf">[PDF]</a></li>
-  <li>Robert Ochs and Nicholas Petrick, FDA - Regulatory Considerations  for Radiological Software <a href="/assets/CI4CC2016-Ochs.pdf">[PDF]</a></li>
+  <li>Juli Klemm, National Cancer Institute, Center for Biomedical Informatics and Information Technology (CBIIT) - NCI-Supported Informatics Technology Development <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Klemm.pdf">[PDF]</a></li>
+  <li>Michael McNitt-Gray, UCLA - Regulatory  Considera1ons  for  Imaging  Biomarkers  in  Clinical  Trials <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-McNitt-Gray.pdf">[PDF]</a></li>
+  <li>Srikanth Adiga, Krishagni Solutions - OpenSpecimen <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Adiga.pdf">[PDF]</a></li>
+  <li>Robert Ochs and Nicholas Petrick, FDA - Regulatory Considerations  for Radiological Software <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Ochs.pdf">[PDF]</a></li>
 </ul>
 
 <h4>Users Perspective</h4>
@@ -67,9 +67,9 @@
 <p>This session contained talks from the groups using academic software and unaffiliated with the code group developing the software tool. Such groups may include academic researchers, industry, clinical researchers, etc.</p>
 
 <ul>
- <li>Jack London, Thomas Jefferson Cancer Center - i2b2: A tool for research data analytics <a href="/assets/CI4CC2016-London.pdf">[PDF]</a> </li>
- <li>Carmelo Gaudioso, Roswell Park Cancer Center - TIES Academic Software Development User Perspectives <a href="/assets/CI4CC2016-Gaudioso.pdf">[PDF]</a></li>
- <li>Tim Fox, Varian Medical Systems -  Academic Software in Cancer Research: User Perspectives <a href="/assets/CI4CC2016-Fox.pdf">[PDF]</a></li>
+ <li>Jack London, Thomas Jefferson Cancer Center - i2b2: A tool for research data analytics <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-London.pdf">[PDF]</a> </li>
+ <li>Carmelo Gaudioso, Roswell Park Cancer Center - TIES Academic Software Development User Perspectives <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Gaudioso.pdf">[PDF]</a></li>
+ <li>Tim Fox, Varian Medical Systems -  Academic Software in Cancer Research: User Perspectives <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Fox.pdf">[PDF]</a></li>
 </ul>
 
 
