--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-44852938-4', 'auto');
+      ga('send', 'pageview');
+    </script>
+
   </head>
   <body>
     <section class="page-header">
@@ -32,7 +42,7 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Program</h3>
 
 <ul>
-<li>Mary Goldman, UC Santa Cruz - Introduction <a href="/assets/CI4CC2016-Goldman.pdf">[PDF]</a></li>
+<li>Mary Goldman, UC Santa Cruz Genomics Institute - Introduction <a href="/assets/CI4CC2016-Goldman.pdf">[PDF]</a></li>
 </ul>
 
 <ul>
@@ -83,4 +93,5 @@
 
 
   </body>
+
 </html>
