--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 <p>This session contained talks from the groups using academic software and unaffiliated with the code group developing the software tool. Such groups may include academic researchers, industry, clinical researchers, etc.</p>
 
 <ul>
- <li><a href="http://www.jefferson.edu/university/jmc/departments/cancer-biology/faculty_staff/faculty/london.html">Jack London</a>, Thomas Jefferson Cancer Center - i2b2: A tool for research data analytics <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-London.pdf">[PDF]</a> </li>
- <li><a href="https://www.roswellpark.edu/carmelo-gaudioso">Carmelo Gaudioso</a>, Roswell Park Cancer Center - TIES Academic Software Development User Perspectives <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Gaudioso.pdf">[PDF]</a></li>
+ <li><a href="http://www.jefferson.edu/university/jmc/departments/cancer-biology/faculty_staff/faculty/london.html">Jack London</a>, Thomas Jefferson Cancer Center - <a href="https://i2b2.org/">i2b2</a>: A tool for research data analytics <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-London.pdf">[PDF]</a> </li>
+ <li><a href="https://www.roswellpark.edu/carmelo-gaudioso">Carmelo Gaudioso</a>, Roswell Park Cancer Center - <a href="http://ties.upmc.com/">TIES</a> Academic Software Development User Perspectives <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Gaudioso.pdf">[PDF]</a></li>
  <li><a href="https://scholar.google.com/citations?user=OvEGJAoAAAAJ&hl=en">Tim Fox</a>, Varian Medical Systems -  Academic Software in Cancer Research: User Perspectives <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Fox.pdf">[PDF]</a></li>
 </ul>
 
