fix incorrect URL

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 
 <ul>
   <li><a href="https://www.spl.harvard.edu/pages/People/kikinis">Ron Kikinis</a>, Brigham and Women's Hospital and Harvard Medical School - <a href="http://slicer.org">3D Slicer</a> <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Kikinis.pdf">[PDF]</a></li>
-  <li><a href="http://www.childrenshospital.org/research-and-innovation/research/labs/natural-language-processing-laboratory/lab-personnel/sean-finan">Sean Finan</a>, Children's Hospital Bostom and Harvard Medical School - <a href="http://slicer.org">cTAKES</a> <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Finan.pdf">[PDF]</a></li>
+  <li><a
+    href="http://www.childrenshospital.org/research-and-innovation/research/labs/natural-language-processing-laboratory/lab-personnel/sean-finan">Sean
+    Finan</a>, Children's Hospital Bostom and Harvard Medical School - <a
+    href="http://ctakes.apache.org">cTAKES</a> <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Finan.pdf">[PDF]</a></li>
   <li><a href="https://www.roswellpark.edu/martin-morgan">Martin Morgan</a>, Roswell Park Cancer Center - <a href="https://www.bioconductor.org/">Bioconductor</a> <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Morgan.pdf">[PDF]</a></li>
   <li>Trinity Urban, Mass General Hospital and Harvard Medical School - <a href="http://www.massgeneral.org/research/resourcelab.aspx?id=28">Tumor Imaging Metrics Core</a> <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Urban.pdf">[PDF]</a></li>
   <li><a href="http://genome.ucsc.edu/blog/author/kuhn/">Robert Kuhn</a>, UC Santa Cruz Genomics Institute - <a href="https://genome.ucsc.edu/">UCSC Genome Browser</a> <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Kuhn.pdf">[PDF]</a></li>
