add link to the minutes doc

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 <li>Juli Klemm, NCI CBIIT - Workshop summary <a href="/assets/CI4CC2016-Klemm-Summary.pdf">[PDF]</a></li>
 </ul>
 
+Crowd-sourced minutes from the workshop are available in <a href="https://goo.gl/sw69Wp">this Google Doc</a>.
+
 <h4>Developer Perspective</h4>
 
 <p>This session featured talks from established academic software tools that have a long history of development and a broad user base, followed by a panel discussion. The idea was to represent tools from various domains and discuss how the development of the tool is sustained, how the user community is supported, was open source adopted and and if so, why, how quality of the code is maintained (who is doing the coding), how the developing group is envisioning the software usage, etc.</p>
