--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 Crowd-sourced minutes from the workshop are available in <a href="https://goo.gl/sw69Wp">this Google Doc</a>.
 
-<h4>Developer Perspective</h4>
+<h4>Session 1: Developer Perspective</h4>
 
 <p>This session featured talks from established academic software tools that have a long history of development and a broad user base, followed by a panel discussion. The idea was to represent tools from various domains and discuss how the development of the tool is sustained, how the user community is supported, was open source adopted and and if so, why, how quality of the code is maintained (who is doing the coding), how the developing group is envisioning the software usage, etc.</p>
 
@@ -66,7 +66,7 @@ Crowd-sourced minutes from the workshop are available in <a href="https://goo.gl
   <li><a href="http://genome.ucsc.edu/blog/author/kuhn/">Robert Kuhn</a>, UC Santa Cruz Genomics Institute - <a href="https://genome.ucsc.edu/">UCSC Genome Browser</a> <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Kuhn.pdf">[PDF]</a></li>
 </ul>
 
-<h4>Stakeholders Perspective</h4>
+<h4>Session 2: Stakeholders Perspective</h4>
 
 <p>In this session talks from the spectrum of academic software stakeholders were presented, followed by a panel discussion. Each speaker was asked to present the vision for the role of academic software in the domain of their work, challenges specific to the use of academic software, what is working well, what needs to be improved, words of advice to the academic software developers, etc.</p>
 
@@ -77,7 +77,7 @@ Crowd-sourced minutes from the workshop are available in <a href="https://goo.gl
   <li>Robert Ochs and Nicholas Petrick, FDA - Regulatory Considerations  for Radiological Software <a href="/CI4CC-Spring2016-ASW/assets/CI4CC2016-Ochs.pdf">[PDF]</a></li>
 </ul>
 
-<h4>Users Perspective</h4>
+<h4>Session 3: Users Perspective</h4>
 
 <p>This session contained talks from the groups using academic software and unaffiliated with the code group developing the software tool. Such groups may include academic researchers, industry, clinical researchers, etc.</p>
 
